--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -120,53 +120,47 @@ nav>img{
   flex-direction: column;
   align-items: center;
 }
-.louise_2>p,
-.louise_4>p{
+.louise_two>p{
   color:white ;
   max-width: 80vw;
 }
-
-
-.louise_1{
-  width: 100vw;
-  height:100vh;
-  background-image: url('../assets/louise1.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+.louise_four>p{
+  color: white;
+  max-width: 50vw;
+  margin-right: 5vw;
 }
-.louise_2 {
+
+.louise_one{
+  margin-top: 5vh;
+  max-width: 100vw;
+  height:auto;
+}
+
+.louise_two {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  margin-top: -72vh;
-  background-image: url('../assets/louise2.png');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #484387;
   width: 100vw;
   height: 60vh;
 }
-.louise_3 {
-  
-  margin-top: -10vh;
-  background-image: url('../assets/louise4.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+.louise_three {
   width: 100vw;
-  height: 40rem;
 }
-.louise_4 {
+.louise_four {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
-  position: relative;
-  margin-top: -90vh;
-  background-image: url('../assets/louise5.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+  background-color: #A12828;
   width: 100vw;
-  height: 80vh;
+  height: 50vh;
 }
+.louise_four>img{
+  align-self: flex-end;
+}
+
 /*----------------convo-----------------*/
 .convo{
   width: 100vw;
@@ -192,11 +186,14 @@ nav>img{
 }
 /*----------------chapter one-----------------*/
 .chapter{
+  font-family: "Italianno";
+  font-size: 3rem;
+  color: var(--light-gold);
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: auto;
+  height: 4rem;
   background-image: url('../assets/chapter_one.svg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -227,7 +224,27 @@ max-width: 100vw;
 .train_info>div>p{
   max-width: 80vw;
 }
-
+/*----------------people-----------------*/
+.people__one{
+  background-color: var(--main-blue);
+}
+.people__two{
+  background-color: #FEFEFE;
+}
+.people__three{
+  background-color: var(--main-red);
+}
+.people__one,
+.people__two,
+.people__three{
+  height: 40vh;
+}
+.people{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
 .people_info {
   display: flex;
   align-items: flex-end;
@@ -266,12 +283,23 @@ max-width: 100vw;
   background-position: center;
 }
 /*----------------items-----------------*/
-.items{
+.item_present{
+  display: flex;
+  flex-direction: column;
   margin-left: 5vw;
-  height: 50vh;
+  height: auto;
   width: 95vw;
   background-image: url('../assets/items_back_phone.svg');
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: left;
+  background-position: left top;
+}
+.items__one{
+  align-self: flex-end;
+  padding-top: 2rem;
+  max-width: 80vw;
+}
+.items__three{
+  margin-left: 5vw;
+  width: 95vw;
 }
