--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -103,12 +103,11 @@ nav>img{
   flex-direction: column;
   align-items: center;
   gap: 8vh;
-  height: 60vh;
+  height: fit-content;
   width: 100vw;
-  margin-top: -5vh;
 }
 .intro>p{
-    max-width: 90vw;
+  max-width: 90vw;
 }
 .intro>img{
   max-width: 80vw;
@@ -116,44 +115,56 @@ nav>img{
 /*----------------louise-----------------*/
 .louise{
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: fit-content;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 8fr;
 }
-.louise_two>p{
+.louise__two>p{
   color:white ;
   max-width: 80vw;
 }
-.louise_four>p{
+.louise__four>p{
   color: white;
   max-width: 50vw;
   margin-right: 5vw;
 }
 
-.louise_one{
-  margin-top: 5vh;
+.louise__one{
+  grid-row:  1 / span 2;
   max-width: 100vw;
-  height:auto;
 }
 
-.louise_two {
+.louise__two {
+  background-image: url('../assets/louise2.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  
+  grid-row: 2 / span 3;
+  grid-row: 2;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  background-color: #484387;
   width: 100vw;
-  height: 60vh;
+  height: 20rem;
 }
-.louise_three {
-  width: 100vw;
+.louise__three {
+  grid-row: 3;
+  max-width: 100vw;
 }
-.louise_four {
+.louise__three>img{
+  max-width: 100vw;
+}
+.louise__four {
+  background-image: url('../assets/louise_back_4.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+
+  grid-row: 4;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  background-color: #A12828;
   width: 100vw;
   height: 50vh;
 }
@@ -164,6 +175,9 @@ nav>img{
 /*----------------convo-----------------*/
 .convo{
   width: 100vw;
+  height: fit-content;
+  margin: 0rem;
+  padding: 0rem;
 }
 .year{
   width: 100vw;
@@ -245,7 +259,7 @@ max-width: 100vw;
   text-align: center;
   background-image: url('../assets/train_back_phone.svg');
   background-repeat: no-repeat;
-  background-size: 100vw;
+  background-size: 100vw 100%;
   background-position: center;
   width: 100vw;
   height: 60vh;
@@ -263,9 +277,20 @@ max-width: 100vw;
 .people__three{
   background-color: var(--main-red);
 }
+.people__one>p {
+  color: white;
+}
+
+.people__two>p {
+}
+
+.people__three>p {
+    color: white;
+}
 .people__one,
 .people__two,
 .people__three{
+  text-align: center;
   height: 40vh;
 }
 .people{
@@ -315,20 +340,50 @@ max-width: 100vw;
 .item_present{
   display: flex;
   flex-direction: column;
-  margin-left: 5vw;
+  justify-content: center;
+  align-items: center;
   height: auto;
-  width: 95vw;
+  width: 100vw;
   background-image: url('../assets/items_back_phone.svg');
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: left top;
+  
 }
 .items__one{
-  align-self: flex-end;
-  padding-top: 2rem;
-  max-width: 80vw;
+  color: white;
+  border: #BB9010 solid 0.1rem;
+  border-radius: 2rem;
+  margin-top: 2rem;
+  max-width: 90vw;
+ 
+  background-color: var(--main-blue)
+}
+.items__one>p{
+  margin: 5vw;
+  width: 80vw;
 }
 .items__three{
   margin-left: 5vw;
   width: 95vw;
+}
+/*----------------dishes-----------------*/
+.dishes--info{
+  background-color: var(--main-red);
+}
+.dishes--menu{
+  list-style: none;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.dish{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.dish>img{
+  max-width: 70vw;
 }
