--- a/vite-project/css/style.css
+++ b/vite-project/css/style.css
@@ -6,6 +6,16 @@
   --light-gold: #FFBF00;
   --dark-gold: #BB9010;
 }
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 .blue_text{
   color: var(--main-blue);
   font-weight: 800;
@@ -44,7 +54,7 @@ nav>img{
 /*----------------hero-----------------*/
 .hero{
   overflow: hidden;
-  padding-top: 30vh;
+  padding-top: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -55,11 +65,6 @@ nav>img{
   background-size: 150vw auto;
   background-position: center bottom ;
   height: 100vh;
-}
-.hero>p{
-  margin-top: 5vh;
-  margin-bottom: 5vh;
-  max-width: 80vw;
 }
 .hero_lottie{
   position: relative;
@@ -77,6 +82,7 @@ nav>img{
   width: 300vw;
   height: 8rem;
 }
+
 .hero_button{
   background-image: url('../assets/back_button.svg');
   background-repeat: no-repeat;
@@ -86,13 +92,13 @@ nav>img{
   align-items: center;
   justify-content: center;
   font-family: "Josefin Slab", serif;
-  font-optical-sizing: auto;
   font-weight: 600;
   font-size: 1.5rem;
   text-decoration: none;
   color: white;
   width: 50vw;
   height: 3rem;
+  margin-top: 5vh;
 }
 
 /*----------------intro-----------------*/
@@ -113,25 +119,27 @@ nav>img{
   max-width: 80vw;
 }
 /*----------------louise-----------------*/
-.louise{
-  width: 100vw;
-  height: fit-content;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 8fr;
-}
-.louise__two>p{
-  color:white ;
+.louise__two>p {
+  color: white;
   max-width: 80vw;
 }
-.louise__four>p{
+
+.louise__four>p {
   color: white;
   max-width: 50vw;
   margin-right: 5vw;
 }
 
+.louise{
+  width: 100vw;
+  height: 150vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, 1fr);
+}
+
 .louise__one{
-  grid-row:  1 / span 2;
+  grid-row: 1/3;
   max-width: 100vw;
 }
 
@@ -140,8 +148,8 @@ nav>img{
   background-size: 100% 100%;
   background-repeat: no-repeat;
   
-  grid-row: 2 / span 3;
-  grid-row: 2;
+  grid-row: 2/4;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -149,13 +157,16 @@ nav>img{
   height: 20rem;
 }
 .louise__three {
-  grid-row: 3;
+  grid-row: 3/5;
+
   max-width: 100vw;
 }
 .louise__three>img{
   max-width: 100vw;
 }
 .louise__four {
+  grid-row: 4/6;
+  
   background-image: url('../assets/louise_back_4.svg');
   background-size: contain;
   background-repeat: no-repeat;
@@ -192,13 +203,14 @@ nav>img{
   text-align: center;
   background-image: url('../assets/container.svg');
   background-repeat: no-repeat;
-  background-size: 100vw;
-  background-position: center;
+  background-size: cover;
 }
 .convo--intro>p{
   max-width: 80vw;
 }
 .convo--exchange{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   width: 100vw;
   height:auto ;
   display: flex;
@@ -219,9 +231,14 @@ nav>img{
   max-width: 80vw;
 }
 .text--blue{
+  max-width: 10rem;
+  margin-left: 5vw;
+  align-self: flex-start;
   background-color: var(--main-blue);
 }
 .text--red{
+  margin-right: 5vw;
+  align-self: flex-end;
   background-color: #A12828;
 }
 .talkers{
@@ -242,13 +259,27 @@ nav>img{
   background-size: cover;
   background-position: center;
 }
-.departure>img{
-max-width: 100vw;
+.departure{
+  position: relative;
+  height:50vh;
 }
+
+.departure--group{
+  position: absolute;
+  max-width: 100vw;
+}
+.departure--group__one,
+.departure--group__two,
+.departure--group__three{
+    margin-top: 10rem;
+}
+
 .train_info{
+  position: relative;
+  z-index: 1;
   display: flex;
-  align-items: flex-end;
-  background: linear-gradient(180deg, rgba(99, 89, 76, 0) 0%, rgba(99, 89, 76, 0.8169861694677871) 19%, rgba(99, 89, 76, 1) 35%, rgba(99, 89, 76, 1) 100%);
+  align-items: center;
+  background: linear-gradient(180deg, rgba(99, 89, 76, 0) 0%, rgba(99, 89, 76, 0.8169861694677871) 5%, rgba(99, 89, 76, 1) 10%, rgba(99, 89, 76, 1) 100%);
   width: 100vw;
   height: 80vh;
 }
@@ -259,7 +290,7 @@ max-width: 100vw;
   text-align: center;
   background-image: url('../assets/train_back_phone.svg');
   background-repeat: no-repeat;
-  background-size: 100vw 100%;
+  background-size: cover;
   background-position: center;
   width: 100vw;
   height: 60vh;
@@ -346,7 +377,8 @@ max-width: 100vw;
   width: 100vw;
   background-image: url('../assets/items_back_phone.svg');
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 100%;
+  background-position: bottom;
   
 }
 .items__one{
