--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,13 @@ body{
   width: 100vw;
 }
 /*----------------navigation-----------------*/
+
 nav{
-  margin-top: 0.5rem;
+  position: fixed;
+  z-index: 4;
   height: 4rem;
   width: 100vw;
   z-index: 1;
-  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -50,6 +51,38 @@ nav>img{
   max-width: 3rem;
   margin-left: 5vw;
   margin-right: 5vw;
+}
+.hamburger:hover{
+  cursor: pointer;
+}
+.links{
+  padding-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-blue);
+  width: 100vw;
+  gap: 2rem;
+  padding-bottom: 2rem;
+}
+.links>a{
+  width: 80vw;
+  border-bottom: #FFBF00 solid 0.1rem;
+  margin-top: 2rem;
+  text-align: center;
+  color:white;
+  text-decoration: none;
+  font-size: 1.5rem;
+}
+.chapter_title{
+  color: var(--light-gold);
+  font-family: "Italianno";
+  font-size: 2rem;
+}
+header{
+  z-index: 11;
+  position: fixed;
 }
 /*----------------hero-----------------*/
 .hero{
@@ -100,9 +133,13 @@ nav>img{
   height: 3rem;
   margin-top: 5vh;
 }
-
+.text__detail{
+  margin: 2rem;
+  width: 50vw;
+}
 /*----------------intro-----------------*/
 .intro{
+  margin-top: -5vh;
   position: relative;
   z-index: -1;
   display: flex;
@@ -130,85 +167,115 @@ nav>img{
   margin-right: 5vw;
 }
 
-.louise{
+.louise {
   width: 100vw;
-  height: 150vh;
+  height: fit-content;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(8, 1fr);
 }
 
-.louise__one{
+.louise__one {
+  align-self:end;
+  grid-column: 1;
   grid-row: 1/3;
   max-width: 100vw;
 }
 
 .louise__two {
-  background-image: url('../assets/louise2.png');
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  
-  grid-row: 2/4;
+  background: linear-gradient(3deg, rgba(72,67,135, 1) 0%, rgba(72,67,135, 1) 19%, rgba(72,67,135, 1) 84%, rgba(0, 0, 0, 0.7049413515406162) 84%, rgba(0, 0, 0, 0) 87%);
+  margin-top: 2rem;
+  z-index: 1;
+  grid-column: 1;
+  grid-row: 2/5;
+  /* Adjust to control the overlap */
 
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 20rem;
 }
+
 .louise__three {
-  grid-row: 3/5;
-
-  max-width: 100vw;
-}
-.louise__three>img{
-  max-width: 100vw;
-}
-.louise__four {
-  grid-row: 4/6;
+  background: linear-gradient(-3deg, rgba(254, 254, 254, 1) 0%, rgba(254, 254, 254, 1) 19%, rgba(254, 254, 254, 1) 84%, rgba(0, 0, 0, 0.7049413515406162) 84%, rgba(0, 0, 0, 0) 87%); 
+  grid-column: 1;
+  grid-row: 4/7;
+  /* Adjust to control the overlap */
+  z-index: 2;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-self: end;
+  height: 80vh;
+  width: 100vw
   
-  background-image: url('../assets/louise_back_4.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
+}
 
-  grid-row: 4;
+.louise__three--image {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  width:25vw;
+  height: auto;
+}
+
+.louise__four {
+  background: linear-gradient(3deg, rgba(161, 40, 40, 1) 0%, rgba(161, 40, 40, 1) 19%, rgba(161, 40, 40, 1) 84%, rgba(0, 0, 0, 0.7049413515406162) 84%, rgba(0, 0, 0, 0) 87%);
+  z-index: 3;
+  grid-column: 1;
+  grid-row: 6/9;
+  align-self: end;
+
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   width: 100vw;
-  height: 50vh;
-}
-.louise_four>img{
-  align-self: flex-end;
+  height: 30rem;
 }
 
+.louise__four>img {
+  width: 30vw;
+  max-width: 12rem;
+  align-self: flex-end;
+}
 /*----------------convo-----------------*/
 .convo{
   width: 100vw;
   height: fit-content;
-  margin: 0rem;
-  padding: 0rem;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 .year{
   width: 100vw;
 }
-.convo--intro{
-  width: 100vw;
-  height: 60vh;
+.convo__intro{
+  width: fit-content;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-image: url('../assets/container.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  border: solid #BB9010 0.1rem;
+  border-radius: 3rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
-.convo--intro>p{
-  max-width: 80vw;
+.convo__intro>p{
+  margin: 5vw;
+  width: 80vw;
+  max-width: 40rem;
 }
-.convo--exchange{
+.convo__detail{
+  max-width: 100vw;
+}
+.convo__exchange{
+  overflow-x: hidden;
   margin-top: 2rem;
   margin-bottom: 2rem;
   width: 100vw;
@@ -219,24 +286,24 @@ nav>img{
   align-items: center;
   gap: 1rem;
 }
-.convo--exchange>li{
+.convo__exchange>li{
   border: #BB9010 solid 0.1rem;
   border-radius: 2rem;
   list-style: none;
   max-width: 95vw;
 }
-.convo--exchange>li>p {
+.convo__exchange>li>p {
   color: white;
   padding: 1rem 1rem;
   max-width: 80vw;
 }
-.text--blue{
+.text__blue{
   max-width: 10rem;
   margin-left: 5vw;
   align-self: flex-start;
   background-color: var(--main-blue);
 }
-.text--red{
+.text__red{
   margin-right: 5vw;
   align-self: flex-end;
   background-color: #A12828;
