--- a/css/style.css
+++ b/css/style.css
@@ -52,12 +52,18 @@ nav>img{
   margin-left: 5vw;
   margin-right: 5vw;
 }
+.hamburger{
+  transition: transform 0.5s ease;
+}
 .hamburger:hover{
   cursor: pointer;
 }
 .links{
   padding-top: 4rem;
+  position: fixed;
   display: flex;
+  top: -40rem;
+  left: 0;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -65,10 +71,12 @@ nav>img{
   width: 100vw;
   gap: 2rem;
   padding-bottom: 2rem;
+  transition: transform 0.5s ease;
 }
+
 .links>a{
   width: 80vw;
-  border-bottom: #FFBF00 solid 0.1rem;
+  border-bottom: #FFBF00 solid 0.05rem;
   margin-top: 2rem;
   text-align: center;
   color:white;
@@ -135,7 +143,7 @@ header{
 }
 .text__detail{
   margin: 2rem;
-  width: 50vw;
+  width: 100vw;
 }
 /*----------------intro-----------------*/
 .intro{
@@ -166,7 +174,10 @@ header{
   max-width: 50vw;
   margin-right: 5vw;
 }
-
+.louise__three>h3 {
+  margin-right: 5vw;
+  margin-left: 5vw;
+}
 .louise {
   width: 100vw;
   height: fit-content;
@@ -208,11 +219,12 @@ header{
   align-items: center;
   justify-content: center;
   align-self: end;
-  height: 80vh;
+  height: 90vh;
   width: 100vw
-  
 }
-
+.text__detail--louise{
+  margin-top: 8rem;
+}
 .louise__three--image {
   margin-top: 3rem;
   margin-bottom: 2rem;
@@ -342,28 +354,27 @@ header{
 }
 
 .train_info{
-  position: relative;
-  z-index: 1;
   display: flex;
   align-items: center;
-  background: linear-gradient(180deg, rgba(99, 89, 76, 0) 0%, rgba(99, 89, 76, 0.8169861694677871) 5%, rgba(99, 89, 76, 1) 10%, rgba(99, 89, 76, 1) 100%);
+  justify-content: center;
+  flex-direction: column;
   width: 100vw;
-  height: 80vh;
+  height: fit-content;
 }
-.train_info>div{
+.train_info--intro{
+  background: linear-gradient(180deg, rgba(99, 89, 76, 0) 0%, rgba(99, 89, 76, 0.8169861694677871) 5%, rgba(99, 89, 76, 1) 10%, rgba(99, 89, 76, 1) 100%);
+  z-index: 3;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-image: url('../assets/train_back_phone.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  
   width: 100vw;
   height: 60vh;
 }
-.train_info>div>p{
+.train_info--intro>p{
   max-width: 80vw;
+  color: white;
 }
 /*----------------people-----------------*/
 .people__one{
@@ -398,9 +409,10 @@ header{
   align-items: center;
 }
 .people_info {
+  background-image: url('../assets/back_detail_one.png');
+  background-size: 10vw;
   display: flex;
-  align-items: flex-end;
-  background: linear-gradient(0deg, rgba(99, 89, 76, 0) 0%, rgba(99, 89, 76, 0.8169861694677871) 19%, rgba(99, 89, 76, 1) 35%, rgba(99, 89, 76, 1) 100%);
+  align-items: center;
   width: 100vw;
   height: 80vh;
 }
@@ -410,10 +422,10 @@ header{
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-image: url('../assets/people_back_phone.svg');
-  background-repeat: no-repeat;
-  background-size: 100vw;
-  background-position: center;
+  background-color: var(--main-blue);
+  border: #FFBF00 solid 0.1rem;
+  border-radius: 1rem;
+  margin: 5vw 2rem;
   width: 100vw;
   height: 60vh;
 }
@@ -421,6 +433,54 @@ header{
 .people_info>div>p {
   color: white;
   max-width: 80vw;
+}
+.cards-container {
+  z-index: 2;
+  width: 100vw;
+  background-color: #FEFEFE;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.cards-container>h3{
+  width: 80vw;
+  max-width: 30rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.card__title{
+  color: #FFBF00;
+  font-size: 2rem;
+}
+.card {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  background-color: var(--main-red);
+  border-radius: 1rem;
+}
+.card>div{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+.card>img{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.hide{
+  display: none;
+}
+.awnser{
+  background-color: white;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  cursor: pointer;
 }
 /*----------------chapter two-----------------*/
 .chapter1 {
@@ -462,27 +522,57 @@ header{
   width: 80vw;
 }
 .items__three{
-  margin-left: 5vw;
-  width: 95vw;
-}
-/*----------------dishes-----------------*/
-.dishes--info{
-  background-color: var(--main-red);
-}
-.dishes--menu{
-  list-style: none;
-  overflow: hidden;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.dish{
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: white;
+  background-color: var(--main-red);
+  width: 100vw;
+}
+.items__three>p{
+  max-width: 30rem;
+  width: 80vw;
+}
+/*----------------dishes-----------------*/
+.dishes--info{
+  text-align: center;
+  color: white;
+  background-color: var(--main-red);
+}
+.dishes--info>p{
+  padding: 2rem;
+}
+.dishes--menu{
+  background-image: url('../assets/back_detail_one.png');
+  list-style: none;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.dish{
+  border-radius: 1rem;
+  padding: 2rem;
+  background-color: var(--main-blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
 }
 .dish>img{
-  max-width: 70vw;
+  width: 50vw;
+  max-width: 30rem;
+}
+.dish>p {
+  color: var(--light-gold);
+  font-family: "Italianno";
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
 }
