--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ header{
   margin-top: 5vh;
 }
 .text__detail{
-  margin: 2rem;
+  margin: 2rem 0rem;
   width: 100vw;
 }
 /*----------------intro-----------------*/
@@ -320,9 +320,18 @@ header{
   align-self: flex-end;
   background-color: #A12828;
 }
-.talkers{
+.convo__talkers{
   width: 100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-evenly;
 }
+.convo__talkers>img{
+  width: 30vw;
+  max-width: 10rem;
+}
+
 /*----------------chapter one-----------------*/
 .chapter{
   font-family: "Italianno";
@@ -575,4 +584,76 @@ header{
   font-family: "Italianno";
   font-size: 2.5rem;
   margin-bottom: 1rem;
+}
+/*----------------documents-----------------*/
+.documents{
+    overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.documents__intro{
+  overflow-x: hidden;
+  gap: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-red);
+}
+.documents__intro--image_one{
+  margin-left: -50%;
+}
+.documents__intro--image_two {
+  margin-right: -50%;
+}
+.documents__intro>p{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  color: white;
+  max-width: 30rem;
+  width: 90vw;
+}
+.documents__text_one,
+.documents__text_two{
+  color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(0deg, rgba(85, 22, 22, 1) 0%, rgba(161, 40, 40, 1) 10%, rgba(161, 40, 40, 1) 90%, rgba(85, 22, 22, 1) 100%);  max-width: 90vw;
+}
+.documents__text_one>p,
+.documents__text_two>p {
+margin: 2rem;
+}
+
+.text__detail--documents{
+  max-width: 100%;
+}
+.documents__find{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  background-color: #FEFEFE;
+}
+.documents__find>p {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  width: 80vw;
+  max-width: 30rem;
+}
+.documents__find--options{
+  gap: 5vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
