--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ header{
 }
 /*----------------intro-----------------*/
 .intro{
-  margin-top: -5vh;
+  margin-top: 5vh;
   position: relative;
   z-index: -1;
   display: flex;
@@ -171,8 +171,9 @@ header{
 
 .louise__four>p {
   color: white;
-  max-width: 50vw;
-  margin-right: 5vw;
+  width: 80vw;
+  max-width: 30rem;
+  margin-top: 2rem;
 }
 .louise__three>h3 {
   margin-right: 5vw;
@@ -187,7 +188,7 @@ header{
 }
 
 .louise__one {
-  align-self:end;
+  align-self:center;
   grid-column: 1;
   grid-row: 1/3;
   max-width: 100vw;
@@ -240,29 +241,30 @@ header{
   align-self: end;
 
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 100vw;
   height: 30rem;
 }
 
 .louise__four>img {
-  width: 30vw;
-  max-width: 12rem;
-  align-self: flex-end;
+  width: 80vw;
+  max-width: 30rem;
 }
 /*----------------convo-----------------*/
 .convo{
   width: 100vw;
   height: fit-content;
-  margin-top: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 
 }
 .year{
+  width: 100vw;
+}
+.decor{
   width: 100vw;
 }
 .convo__intro{
@@ -324,12 +326,12 @@ header{
   width: 100vw;
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
+  align-items: center;
   justify-content: space-evenly;
 }
 .convo__talkers>img{
-  width: 30vw;
-  max-width: 10rem;
+  width: 40vw;
+  max-width: 20rem;
 }
 
 /*----------------chapter one-----------------*/
