--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ body {
   font-weight: 400;
   font-style: normal;
   font-size: 24px;
-  line-height: 28px;
   background-color: var(--main-brown);
   width: 100vw;
   line-height: 1.5;
@@ -44,7 +43,7 @@ body {
 
 .mobile__nav {
   position: fixed;
-  z-index: 4;
+  z-index: 10;
   height: 4rem;
   width: 100vw;
   z-index: 1;
@@ -55,11 +54,12 @@ body {
 }
 
 .mobile__nav>img {
-  max-width: 3rem;
+  width: 3rem;
   margin-left: 5vw;
   margin-right: 5vw;
 }
 .desktop__nav{
+  
   padding-left: 2vw;
   padding-right: 2vw;
   padding-top: 1vw;
@@ -106,6 +106,7 @@ border-radius: 1rem;
   padding: 0.5rem 2rem;
 }
 .chapters:hover,.chapters:active{
+  cursor: pointer;
   color: #484387;
   background-color: var(--light-gold);
   border-radius: 1rem;
@@ -114,8 +115,10 @@ border-radius: 1rem;
 }
 .chapter__list{
   color: white;
-  top: 3rem;
+  top: 4rem;
   position: absolute;
+  left: 50%;
+  margin-left: -12.5vw;
   display: flex;
   flex-direction: column;
   background-color: var(--main-blue);
@@ -125,16 +128,18 @@ border-radius: 1rem;
   transform: translateY(-30rem);
   transition: transform 0.5s ease;
 }
-.chapter__list>ul>li{
+.chapter__list>div>a{
   margin-top: 1rem;
   margin-bottom: 1rem;
   padding: 1rem 2rem;
 }
-.chapter__list>ul>li:hover,.chapter__list>ul>li:active {
+
+.chapter__list>div>a:hover,.chapter__list>div>a:active {
   background-color: var(--light-gold);
   color: #484387;
   border-radius: 1rem;
   padding: 1rem 2rem;
+  cursor: pointer;
 }
 .hamburger {
   transition: transform 0.5s ease;
@@ -157,7 +162,16 @@ border-radius: 1rem;
   padding-bottom: 1rem;
   transition: transform 0.5s ease;
 }
-
+.links__desktop{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.changer{
+  color: white;
+  text-decoration: none;
+}
 .links>a {
   line-height: 1.2;
   width: 80vw;
@@ -195,39 +209,109 @@ header {
   border-radius: 2rem;
   padding: 1rem;
 }
-
+.hidden{
+  display:none;
+}
 /*----------------hero-----------------*/
 .hero {
   overflow: hidden;
-  padding-top: 20vh;
+  padding-top: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   text-align: center;
-  background-image: url("../assets/hero_phone.png");
-  background-repeat: no-repeat;
-  background-size: 150vw auto;
-  background-position: center bottom;
   height: 100vh;
+}
+.hero>div{
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+.hero>div>img{
+  position: absolute;
+}
+.intro_rock{
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 11;
+  max-width: 100vw;
+  margin-top: -5vw;
+}
+.intro_rock>:nth-child(1){
+ max-width: 100vw;
+ max-height: 3vw;
+}
+.intro_rock>img{
+  width: 120vw;
+  height: 10vw;
+}
+.intro_rock>:nth-child(1) {
+  margin-bottom: -0.1rem;
+  }
+.hero_two {
+  height: 14vw;
+  width: 200vw;
+  bottom: 0vw;
+  left: -100vw;
+  z-index: 8;
+}
+.hero_three {
+  width: 80vw;
+  height: 40vw;
+  bottom: 0;
+  right: -20vw;
+  z-index: 6;
+}
+.hero_four {
+  max-width: 100vw;
+  max-height: 40rem;
+  bottom: 0;
+  left: 0;
+  z-index: 7;
+}
+.hero_five {
+  max-width: 100vw;
+  max-height: 30rem;
+  bottom: -50px;
+  left: 0;
+  z-index: 5;
+}
+.hero_six {
+  max-height: 45rem;
+  width: 70vw;
+  height: 100vw;
+  bottom: 0px;
+  left: -20vw;
+  z-index: 4;
+}
+.hero_seven {
+  max-width: 100vw;
+  bottom: 0;
+    left: 0;
+  z-index: 3;
+}
+.hero_eight {
+  bottom: 0;
+    left: 0;
+  z-index: 2;
+}
+.hero_nine {
+  bottom: 0;
+    left: 0;
+  z-index: 1;
 }
 
 .hero_lottie {
+  margin-top: 5rem;
   position: relative;
-  width: 80vw;
+  width: 100vw;
+  max-width: 25rem;
   height: auto;
-}
-
-.hero_lottie::before {
-  position: absolute;
-  top: -17.5vw;
-  left: 10vw;
-  background-image: url('../assets/hero_train.png');
-  background-repeat: no-repeat;
-  content: '';
-  background-size: contain;
-  width: 300vw;
-  height: 8rem;
 }
 
 .hero_button {
@@ -251,6 +335,7 @@ header {
 .text__detail {
   margin: 2rem 0rem;
   width: 100vw;
+  max-width: 50rem;
 }
 
 /*----------------intro-----------------*/
@@ -277,13 +362,7 @@ header {
   max-width: 80vw;
 }
 
-.louise__four>p {
-  color: white;
-  width: 80vw;
-  max-width: 30rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
+
 
 .louise__three>h3 {
   margin-right: 5vw;
@@ -299,16 +378,16 @@ header {
 }
 
 .louise__one {
-  align-self: center;
+  align-self: start;
   grid-column: 1;
   grid-row: 1/3;
   max-width: 100vw;
 }
 
 .louise__two {
-  align-self: end;
+  align-self: start;
   background: linear-gradient(3deg, rgba(72, 67, 135, 1) 0%, rgba(72, 67, 135, 1) 19%, rgba(72, 67, 135, 1) 84%, rgba(0, 0, 0, 0.7049413515406162) 84%, rgba(0, 0, 0, 0) 87%);
-  margin-top: 2rem;
+  margin-top: 20vh;
   z-index: 1;
   grid-column: 1;
   grid-row: 1/3;
@@ -334,7 +413,7 @@ header {
   justify-content: center;
   height: fit-content;
   width: 100vw;
-  margin-top: 20rem;
+  margin-top: 2rem;
   padding-bottom: 10rem;
   padding-top: 10rem;
 }
@@ -351,7 +430,6 @@ header {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  gap: 5vw;
 
 }
 .louise__three>div>img{
@@ -366,15 +444,22 @@ header {
   grid-column: 1;
   grid-row: 3/5;
   align-self: end;
-
+  padding-top: 4rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: fit-content;
+  text-align: center;
 }
-
+.louise__four>p {
+  color: white;
+  width: 80vw;
+  max-width: 30rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
 .louise__four>img {
   margin-top: 4rem;
   width: 80vw;
@@ -388,9 +473,13 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
-
+.convo__context{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .year {
   width: 100vw;
   max-width: 50rem ;
@@ -408,8 +497,9 @@ header {
   align-items: center;
   justify-content: center;
   text-align: center;
-  border: solid #BB9010 0.1rem;
-  border-radius: 3rem;
+  background-color: var(--main-blue);
+  color: white;
+  border-radius: 1rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
@@ -508,7 +598,7 @@ header {
   margin-top: 10rem;
 }
 
-.train_info {
+.train__info {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -517,7 +607,7 @@ header {
   height: fit-content;
 }
 
-.train_info--intro {
+.train__info--intro {
   background: linear-gradient(180deg, rgba(99, 89, 76, 0) 0%, rgba(99, 89, 76, 0.8169861694677871) 5%, rgba(99, 89, 76, 1) 10%, rgba(99, 89, 76, 1) 100%);
   z-index: 3;
   display: flex;
@@ -526,11 +616,12 @@ header {
   text-align: center;
 
   width: 100vw;
-  height: 60vh;
+  height: 20rem;
 }
 
-.train_info--intro>p {
-  max-width: 80vw;
+.train__info--intro>p {
+  max-width: 30rem;
+  width: 80vw;
   color: white;
 }
 
@@ -571,16 +662,17 @@ header {
   align-items: center;
 }
 
-.people_info {
+.people__info {
   background-image: url('../assets/back_detail_one.png');
-  background-size: 10vw;
+  background-size: 8.75vw;
+  background-position: 0%;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100vw;
 }
 
-.people_info>div {
+.people__info>div {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -593,7 +685,7 @@ header {
   max-width:50rem ;
 }
 
-.people_info>div>p {
+.people__info>div>p {
   color: white;
   max-width: 30rem;
   width: 80vw;
@@ -738,6 +830,7 @@ header {
   color: white;
   background-color: var(--main-red);
   width: 100vw;
+  margin-bottom: -0.1rem;
 }
 
 .items__three>p {
@@ -776,7 +869,7 @@ header {
 }
 .cutlery{
   width: 100vw;
-  max-width: 50rem;
+  max-width: 40rem;
   background-color: var(--main-red);
   margin-top: -5rem;
   padding-bottom: 2rem;
@@ -963,14 +1056,10 @@ header {
   background-size: cover;
   background-position: 0 0;
   background-repeat: no-repeat;
-  overflow-x: hidden;
-  height: fit-content;
-  position: relative;
 }
 
 .landscape__animation--train {
   width: 100vw;
-  height: auto;
 }
 
 .landscape__info {
@@ -1032,13 +1121,16 @@ header {
   max-width: 30rem;
   width: 90vw;
 }
+.destination__one>p {
+  width: 90vw;
+  max-width: 30rem;
+}
 .destination__one{
   text-align: center;
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
   justify-content: center;
-
   margin-top: 4rem;
   width: 90vw;
   max-width: 30rem;
@@ -1059,7 +1151,6 @@ header {
 }
 .destination__info--two {
   color: white;
-  background-color: var(--main-red);
   padding: 2rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
@@ -1091,7 +1182,7 @@ footer{
   align-items: center;
   justify-content: center;
 }
-.footer__one>ul {
+.footer__one>div {
   font-size: 2rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1101,11 +1192,12 @@ footer{
   align-items: center;
   border-bottom: solid var(--light-gold) 0.1rem;
 }
-.footer__one>ul>li{
+.footer__one>div>a{
   border-radius: 1rem;
   padding: 1rem 2rem;
 }
-.footer__one>ul>li:hover,.footer__one>ul>li:active {
+.footer__one>div>a:hover,.footer__one>div>a:active {
+  cursor: pointer;
   background-color: var(--light-gold);
   color: #484387;
   border-radius: 1rem;
@@ -1127,6 +1219,10 @@ footer{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.socials,
+.contact{
+  width: 20rem;
 }
 .logo{
   display: flex;
@@ -1198,8 +1294,14 @@ footer{
   background-color: var(--main-red);
   width: 100vw;
 }
-.map>p{
+.map>:nth-child(1) {
+  max-width: 40rem;
+  align-self: center;
+}
 
+.map>:nth-child(3) {
+  max-width: 40rem;
+  align-self: center;
 }
 .rock,.canal{
   width: 100vw;
@@ -1207,15 +1309,66 @@ footer{
 .rock{
   margin-bottom: -0.5rem;
 }
-
+.other{
+ display: flex;
+ flex-direction: row;
+ flex-wrap: wrap;
+ justify-content: center;
+ align-items: center;
+ gap: 5vh;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.previous{
+  border-radius: 1rem;
+  background-color: #FEFEFE;
+  width: 95vw;
+  width: 20rem;
+  height: 30rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.previous:hover,.previous:active{
+  scale: 1.05;
+}
+.previous>img {
+  margin: 1rem;
+  border-radius: 1rem;
+  width: 90vw;
+  max-width: 15rem;
+}
+.previous>p {
+ color: var(--main-blue);
+ font-size: 2rem;
+ font-weight: 600;
+}
+.story__author{text-align: center;
+  color: #484387;
+}
+.story__title{
+  text-align: center;
+font-weight: 600;
+}
 
 
 
 
 
 @media (min-width: 450px) {
-
-  .footer__one>ul {
+  body{
+    font-size: 26px;
+  }
+  .louise__two {
+      margin-top: 34vh;
+      padding-top: 10rem;
+      padding-bottom: 20rem;
+    }
+    
+  .footer__one>div {
       grid-template-rows: repeat(2, 1fr);
       grid-template-columns: repeat(2, 1fr);
     }
@@ -1228,16 +1381,31 @@ footer{
 }
 
 @media (min-width: 678px) {
- .mobile__nav{
-  display: none;
- }
- .desktop__nav {
-   display: flex;
- }
- 
-  .footer__two{
-    flex-direction: row;
+  body {
+      font-size: 28px;
+    }
+  .map>:nth-child(1) {
+      max-width: 40rem;
+      align-self: end;
+    }
+  
+    .map>:nth-child(3) {
+      max-width: 40rem;
+      align-self: start;
+    }
+  .train__info--intro {
+      height: 15rem;
+      margin-top: 5rem;
+    }
+
+  .mobile__nav{
+   display: none;
   }
+  .desktop__nav {
+    display: flex;
+  }
+ 
+  
   .train_info--intro {
     margin-top: 10rem;
   }
@@ -1257,7 +1425,63 @@ footer{
 }
 
 @media (min-width: 1028px) {
-  .footer__one>ul {
+ 
+  .canal{
+    margin-top: -6rem;
+  }
+  .between{
+    margin-top: -8rem;
+  }
+  .destination__two{
+    margin-top: -10rem;
+  }
+  .map>:nth-child(3){
+    margin-top: -2rem;
+  }
+  .train__info--intro {
+      height: 20rem;
+      margin-top: 20rem;
+    }
+  .convo__context {
+    width: 100vw;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: space-around;
+    }
+    .convo__intro {
+      overflow: hidden;
+      width: fit-content;
+      height: fit-content;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      background-color: var(--main-blue);
+      color: white;
+      border-radius: 1rem;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
+      margin-left: -5rem;
+    }
+    .year{
+      margin-left: -20vw;
+    }
+    .convo__intro>p {
+      margin: 5vw;
+      width: 30vw;
+      max-width: 40rem;
+    }
+  .footer__two {
+      flex-direction: row;
+    }
+  .louise__two {
+      margin-top: 34vh;
+      padding-top: 10rem;
+      padding-bottom: 20rem;
+    }
+  .footer__one>div {
       grid-template-rows: repeat(1, 1fr);
       grid-template-columns: repeat(4, 1fr);
     }
@@ -1290,6 +1514,7 @@ footer{
     text-align:left;
   }
   .destination__one{
+      gap: 5vw;
     flex-direction: row;
     max-width: none;
     text-align: left;
@@ -1298,6 +1523,11 @@ footer{
 
 }
 @media (min-width: 1600px) {
+  .train__info--intro {
+      height: 20rem;
+      margin-top: 30rem;
+    }
+
   .convo__container{
     flex-direction: row;
     max-width: 90vw;
