--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ header {
   align-items: center;
   justify-content: flex-start;
   text-align: center;
-  height: 100vh;
+  height: 100dvh;
 }
 .hero>div{
   position: relative;
